--- a/projects/style.css
+++ b/projects/style.css
@@ -191,6 +191,23 @@ body::before {
   padding: 20px;
 }
 
+.somelink {
+  width: fit-content;
+  color: black;
+  background-color: rgb(221, 221, 221);
+  border: 2px solid black;
+  margin: 15px;
+  padding: 5px;
+  cursor: pointer;
+  font-family: "Silkscreen", monospace;
+}
+
+.hoverbtn:hover {
+  cursor: pointer;
+  scale: 1.1;
+  opacity: 0.9;
+}
+
 h1 {
   position: absolute;
   top: 15px;
