--- a/projects/style.css
+++ b/projects/style.css
@@ -199,6 +199,7 @@ body::before {
   margin: 15px;
   padding: 5px;
   cursor: pointer;
+  font-size: 14px;
   font-family: "Silkscreen", monospace;
 }
 
