--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ html {
 
 body {
   background: var(--bg);
-  background-image: url("./images/bg.gif");
+  background-image: url("./images/burgerbg2.png");
   font-family: "Red Hat Mono", monospace;
   position: relative;
   min-height: 90vh;
@@ -143,8 +143,7 @@ body::before {
 }
 
 #desktop img {
-  width: 200px;
-  height: 200px;
+  width: 300px;
 }
 
 @keyframes popup {
