--- a/style.css
+++ b/style.css
@@ -440,6 +440,7 @@ input[type="checkbox"] {
 }
 
 .topright {
+  top: 0;
   right: 0;
 }
 
@@ -491,4 +492,52 @@ input[type="checkbox"] {
   cursor: pointer;
   transform: scale(1.05);
   transition: transform 0.3s ease-in-out;
+}
+
+.ccBox {
+  background-color: #27272770;
+  color: #eb3b3b;
+  background-color: white;
+  border: solid 2px rgb(224, 203, 12);
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.ccText {
+  color: rgb(97, 97, 97);
+}
+
+.ccBox:hover {
+  scale: 1.05;
+  transition: scale 0.3s ease-in-out;
+  opacity: 0.9;
+}
+
+.tooltip {
+  position: relative;
+  display: inline-block;
+  cursor: default;
+}
+
+.tooltip .tooltiptext {
+  visibility: hidden;
+  padding: 0.25em 0.5em;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  border-radius: 0.25em;
+  white-space: nowrap;
+
+  /* Position the tooltip */
+  position: absolute;
+  z-index: 1;
+  top: 100%;
+  left: 100%;
+  transition-property: visibility;
+  transition-delay: 0s;
+}
+
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+  transition-delay: 0.3s;
 }
